add to ae produt api
